@@ -3,7 +3,7 @@
 <plugin
    id="org.eclipse.cdt.rpm.core"
    name="Rpm Core Plug-in"
-   version="1.1"
+   version="1.2"
    provider-name="Eclipse.org"
    class = "org.eclipse.cdt.rpm.core.RPMCorePlugin"
    >
