@@ -2,7 +2,7 @@
 <plugin
    id="org.eclipse.cdt.rpm.doc"
    name="%pluginName"
-   version="1.1"
+   version="1.2"
    provider-name="%providerName">
 
    <runtime>
