@@ -3,7 +3,7 @@
 <plugin
    id="org.eclipse.cdt.rpm.ui"
    name="RPM UI Plug-in"
-   version="1.1"
+   version="1.2"
    provider-name="Eclipse.org"
    >
    
