@@ -1,3 +1,6 @@
+2004-11-11  Rick Moseley  <rmoseley@redhat.com>
+	* plugin.xml: change version to 1.2
+
 2004-11-05  Aaron Luchko  <aluchko@redhat.com>
 
 	* src/org/eclipse/cdt/rpm/ui/RPMExportPage.java (): show only C/C++ projects to 
