@@ -1,3 +1,6 @@
+2004-11-11  Rick Moseley  <rmoseley@redhat.com>
+	* plugin.xml: change version to 1.2
+
 2004-11-08  Rick Moseley  <rmoseley@redhat.com>
 
 	* src/org/eclipse/cdt/rpm/core/LinuxShellCmds.java (executeLinuxCommand): add
